Issue #87 : Alignment of title on top left

--- a/app/styles/content-editor.css
+++ b/app/styles/content-editor.css
@@ -89,7 +89,7 @@ body {
 }
 
 .content-title {
-    font-size: 14px;
+    font-size: 16px;
     padding: 5px !important;
     border: 1px white solid !important;
     border-radius: 0px !important;
